Removed txIn Class, replaced all txIn occurences with txOut

--- a/templates/blockviewer.html
+++ b/templates/blockviewer.html
@@ -18,7 +18,7 @@
         >> Transaction Hash : {{tx.tx_hash}}
             <br>Inputs : <br>
             {% for ip in tx.inputs: %}
-            > Sender : {{ip.sender_addr}}
+            > Sender : {{ip.receiver_addr}}
               Amount : {{ip.val}}
             {% endfor %}
             <br>Outputs : <br>
